fix extra margin bottom on about page

--- a/client/src/app/about/about.component.scss
+++ b/client/src/app/about/about.component.scss
@@ -133,6 +133,7 @@ h2{
     position: relative;
     display: flex;
     justify-content: center;
+    margin-bottom: -50px;
     img{
       position: absolute;
       top: 0;
